--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ nav .fa{
         height: 100vh;
         width: 200px;
         top: 0;
-        right: -200;
+        right: -200px;
         text-align: left;
         z-index: 2;
         transition: 1s;
@@ -104,7 +104,7 @@ nav .fa{
 
     }
     .nav-links ul{
-        padding: 40px;
+        padding: 35px;
     }
 }
 
